[package]
name = "byteme"
description = "Converts a struct into byte array `[u8]` by reading the fields in the struct."
version = "0.0.1-dev"
edition = "2021"
authors = [
  "Yousuf Jawwad <yousuf@breu.io>",
]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[[test]]
name = "progress"
path = "tests/progress.rs"

[[bin]]
name = "view"
path = "src/view.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["full", "extra-traits"] }
