[package]
name = "byteme"
description = "Converts a struct into Vec<u8> and back. The conversion is Big Endian by default."
version = "0.0.5"
edition = "2021"
authors = ["Yousuf Jawwad <yousuf@breu.io>"]
license = "Apache-2.0"
repository = "https://github.com/breuHQ/byteme"
documentation = "https://docs.rs/byteme"
readme = "README.md"
keywords = ["proc-macro", "bytes"]
categories = [
  "development-tools::procedural-macro-helpers",
  "encoding",
  "rust-patterns",
  "parser-implementations",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[[test]]
name = "progress"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.63", features = ["diff"] }

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.15"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.96", features = ["full", "extra-traits"] }
